--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,31 +12,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FoodBankSurplus"
         tools:targetApi="31">
-
         <activity
-            android:name=".LoginActivity"
-            android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
-
-        </activity>
-        <activity
-            android:name=".SplashActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".provider.ProviderMainActivity"
-            android:exported="true"
-            android:label="@string/title_activity_provider_main">
+            android:name=".CustomerRegisterActivity"
+            android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"></activity>
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".provider.ProviderMainActivity"
+            android:exported="false"
+            android:label="@string/title_activity_provider_main">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
         <activity
             android:name=".MainActivity"
