provider food form and feedback design is done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,20 +22,21 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false"
-            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar"></activity>
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
+            android:exported="false" />
+        <activity
+            android:name=".provider.ProviderMainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_provider_main"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".provider.ProviderMainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_provider_main">
+
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
