--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,18 +38,18 @@
             android:name=".SplashActivity"
             android:exported="true">
 
+        </activity>
+        <activity
+            android:name=".provider.ProviderMainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_provider_main"
+            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
-        </activity>
-        <activity
-            android:name=".provider.ProviderMainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_provider_main"
-            android:theme="@style/Theme.MaterialComponents.DayNight.NoActionBar">
 
             <meta-data
                 android:name="android.app.lib_name"
